# llm-rag

./: .gitignore  CAMELOT_IMPROVEMENTS.md  CAMELOT_SUMMARY.md  COMPLETION_SUMMARY.md  PERGUNTAS_RAPIDAS.txt  PERGUNTAS_TESTE.md  PROFESSIONALIZATION.md  README-SETUP.md  README.md  environment.yml  pyproject.toml  start.ps1  start.py
.claude/: settings.json
.streamlit/: config.toml
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pytest.ini  requirements.txt  start.sh
backend/app/: main.py
backend/app/api/: memory_routes.py  routes.py
backend/app/core/: advanced_ingestion.py  chroma_store.py  config.py  embedder.py  ingestion.py  lexical.py  llm.py  memory.py  mongo_store.py  pipeline.py  text_utils.py  vector_store.py
backend/app/models/: schemas.py
backend/app/utils/: logging.py  text.py
backend/data/index/: index_signature.json
backend/docs/: architecture.md  embedding_analysis.json  evaluation.md
backend/scripts/: analyze_embeddings.py  download_embeddings.py  download_model.py  ensure_models.py  plot_embedding_analysis.py  reindex_pdfs.py
backend/tests/: conftest.py  test_config.py  test_embedder.py  test_ingestion.py  test_llm_guards.py  test_rag_system.py  test_schemas.py  test_table_extraction.py  test_text_utils.py  test_utils.py
docs/: ARCHITECTURE.md  COMPONENTS.md  DATA_FLOWS.md  README.md  architecture.mmd
frontend/: rag_chat.py  requirements.txt
frontend/assets/: styles.css
frontend/components/: chat.py  diagram.py  prompt_viewer.py  sidebar.py  thinking.py
frontend/utils/: api_client.py  demo_data.py  formatting.py
integrations/: .env.example  ARCHITECTURE.md  Dockerfile  chroma_store.py  config.py  docker-compose.yml  main.py  memory.py  memory_routes.py  mongo-init.js  mongo_store.py  pipeline.py  requirements.txt
scripts/: setup_backend_mac.sh
